<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>391</width>
    <height>293</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="btnRename">
        <property name="text">
         <string>rename</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btnSSIM">
        <property name="text">
         <string>ssim</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btnModifyLabel">
        <property name="text">
         <string>modify label</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btnExtract">
        <property name="text">
         <string>extract</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btnAnalysis">
        <property name="text">
         <string>analysis xml</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QListWidget" name="listWidget"/>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>391</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
